# maps_toolkit_pkg

./: CITATION.cff  LICENSE  README.md  pyproject.toml
maps_toolkit/: __init__.py
maps_toolkit/analyze/: __init__.py  analysis_runner.py  utils.py
maps_toolkit/analyze/plugins/: aggregate.py  duration.py  shared.py
maps_toolkit/preprocess/: __init__.py  engine.py  generic.py
maps_toolkit/reconstruct/: __init__.py  main.py
maps_toolkit/reconstruct/core/: config_loader.py  data_processor.py  fast_index.py
tests/analyze/: test_plugin_contract.py  test_utils.py
tests/preprocess/: test_generic_steps.py
tests/reconstruct/: test_config_roles.py  test_source_role.py
